% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/robustbase/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{robustbase}}
\encoding{UTF-8}

\section{CHANGES in robustbase VERSION 0.95-2 (2023-05-25, svn r917)}{
  % --- 1.0-0  once we fix  adjOutlyingness() properly !
  %     =====
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{lmrob.control()} gets class \code{"lmrobCtrl"} and can be
      \code{update()}d.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Fixed \code{covMcd()}: corrected the consistency correction
      factor for the reweighted estimate: was MCDCons(p, sum(w)/n),
      now is MCDCons(p, 0.975), see Croux and Haesbroeck (1999).
      % MM -> VT: note this *broke* the checks!

      \item registered \code{residuals.lmrob.S}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item argument \code{mf} e.g., in \code{lmrob.fit()} has been deprecated
      since 2017-12-09 and is defunct now.

      \item \code{lmrob()} tweaks, notably saying more for \code{trace.lev >= 3}.
    }
  }
}

\section{CHANGES in robustbase VERSION 0.95-1 (2023-03-28, svn r903)}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Fixed \code{covMcd()}: \code{raw.only=TRUE} does not work in the case \code{nsamp="deterministic"}
    }
  }
  \subsection{NEW FEATURES}{
    \itemize{
      \item New \code{lmc()} and \code{rmc()} for robust tail weight
      (\dQuote{robust kurtosis}). % ../man/lmc-rmc.Rd
    }
  }
  \subsection{Misc}{
    \itemize{
      \item Our \file{tests/*.R} no longer rely on the \CRANpkg{Matrix}
      \file{test-tools.R} collection but rather use our much smaller own
      one in \file{xtraR/test-tools.R}.

      \item fixed \code{\\} escape in \file{man/aircraft.Rd}.

      \item initialize \var{equed} in \file{src/lmrob.c} to avoid
      false positive compiler warning.

      \item document "internal" \code{.regularize.Mpsi()}.
