@@ -4,7 +4,7 @@
 \title{News for \R Package \pkg{robustbase}}
 \encoding{UTF-8}
 
-\section{CHANGES in robustbase VERSION 0.95-2 (2023-05-25, svn r917)}{
+\section{CHANGES in robustbase VERSION 0.95-2 (2023-05-27, svn r918)}{
   % --- 1.0-0  once we fix  adjOutlyingness() properly !
   %     =====
   \subsection{NEW FEATURES}{
@@ -21,7 +21,8 @@
       now is MCDCons(p, 0.975), see Croux and Haesbroeck (1999).
       % MM -> VT: note this *broke* the checks!
 
-      \item registered \code{residuals.lmrob.S}.
+      \item registered \code{residuals.lmrob.S} \emph{and} changed
+      \code{formals} compatible with generic to \code{(object, ...)}.
     }
   }
   \subsection{Misc}{
